SQLite Part Layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HelpMeApply</string>
     <string name="companies">Companies</string>
     <string name="aboutme">About Me</string>
+    <string name="update">Update About Me</string>
 </resources>
